# llama2-burn

./: .gitignore  Cargo.toml  README.md
.github/workflows/: sync.yaml
llama-py/: .gitignore  download.sh  dump.py  dump_model.py  dump_test.py  model.py  requirements.txt  test.py  test_tokenizer.py  tokenizer.py
src/: helper.rs  lib.rs  model.rs  token.rs
